# finplot

./: .gitignore  pyproject.toml
finplot/: __init__.py  plotmetrics.py
tests/: test_plot.py  test_track.csv
