[tool.poetry]
name = "finplot"
version = "1.9.2"
description = ""
authors = ["Dmitrii Shibanov <dmitry.shibanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.1"
python-dateutil = "^2.8.2"
# numpy = "^1.23.5"
# pandas = "^1.5.2"
# PyQt6 = "^6.4.0" 
# pyqtgraph = "^0.13.1"
numpy = "^1.26.0"
pandas = "^2.1.1"
pyqt6 = "^6.5.2"
pyqtgraph = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
