[project]
name = "finplot"
version = "1.9.2"
description = ""
authors = [{ name = "Dmitrii Shibanov", email = "dmitry.shibanov@gmail.com" }]
requires-python = ">=3.11, <3.12"
readme = "README.md"
dependencies = [
    "python-dateutil>=2.8.2,<3",
    # "numpy>=1.22,<1.24",
    "numpy",
    "pandas>=2.1.1,<3",
    "pyqt6>=6.5.2,<7",
    "pyqtgraph>=0.13.3,<0.14",
    "requests>=2.31.0,<3",
    "yfinance>=0.2.28,<0.3",
    "websocket>=0.2.1,<0.3",
    "scipy>=1.11.2,<2",
    "tabulate>=0.9.0,<0.10",
    "matplotlib>=3.10.0,<4",
    "webcolors>=24.11.1,<25",
    "pytest>=9.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
